fixed overview ruler alignment

--- a/tabby-terminal/src/frontends/xterm.css
+++ b/tabby-terminal/src/frontends/xterm.css
@@ -14,7 +14,7 @@
 }
 
 .xterm-decoration-overview-ruler {
-    right: 6px;
+    right: 1px;
     pointer-events: none;
 }
 
